Fix overflow problem with resizing of button for login/signup with WCA account

--- a/client/app/account/signup/signup.scss
+++ b/client/app/account/signup/signup.scss
@@ -1,18 +1,58 @@
 
 .btn-xlg {
-  font-size: 150%;
-  padding: 30px 60px;
+  max-width: 100%;
+
+  // Phone sized screens
+  padding: 15px 30px;
+  height: 54px;
+  
+  @media only screen and (min-width : 480px) {
+    // Tablet sized screens
+    font-size: 125%;
+    padding: 25px 50px;
+    height: 77px;
+  }
+  @media only screen and (min-width : 768px) {
+    // Normal sized screens
+    font-size: 150%;
+    padding: 30px 60px;
+    height: 96px;
+  }
 }
 
 .btn-icon-image {
-  width: 96px;
   float: left;
-  margin-top: -30px;
-  margin-bottom: -30px;
-  margin-left: -60px;
-  margin-right: 30px;
-  padding: 20px;
-  border-right: 1px solid lightgray;
   
+  // Phone sized screens
+  height: 54px;
+  margin-left: -30px;
+  margin-top: -15px;
+  margin-bottom: -15px;
+  margin-right: 15px;
+  padding: 10px;
+  
+  
+
+  @media only screen and (min-width : 480px) {
+    // Tablet sized screens
+    height: 77px;
+    margin-left: -50px;
+    margin-top: -25px;
+    margin-bottom: -25px;
+    margin-right: 25px;
+    padding: 15px;
+  }  
+  
+  @media only screen and (min-width : 768px) {
+    // Normal sized screens
+    height: 96px;
+    margin-left: -60px;
+    margin-top: -30px;
+    margin-bottom: -30px;
+    margin-right: 30px;
+    padding: 20px;
+  }
+  
+  border-right: 1px solid lightgray;  
 }
 
